--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin-top: 180px;
-    background-image: url('/assets/img/Design\ sem\ nome.png');
+    background-image: url('/Projeto-Front/assets/img/Design\ sem\ nome.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
